--- a/visualization_site.css
+++ b/visualization_site.css
@@ -105,7 +105,7 @@
 		margin-top: 10px;
 		margin-bottom:10px;	
 	}
-		.long_line {
+	.long_line {
 		width: 85%;
 		height: 4px;
 		margin-left: auto;
@@ -115,4 +115,79 @@
 		margin-top: 10px;
 		margin-bottom:10px;	
 	}
+	.row {
+		display: flex;
+	}
 
+	.column {
+		flex: 33.33%;
+		padding: 5px;
+	}
+
+	.picture_container {
+		position: relative;
+		width: 100%;
+	}
+
+	.image {
+		display: block;
+		width: auto;
+		height: auto;
+	}
+
+	.picture_overlay_left {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: #008CBA;
+		overflow: hidden;
+		width: 0;
+		height: 100%;
+		transition: 1s ease;
+	}
+	.picture_overlay_up {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: #008CBA;
+		overflow: hidden;
+		width: 100%;
+		height: 0;
+		transition: 1s ease;
+	}
+	.picture_overlay_right{
+		position: absolute;
+		bottom: 0;
+		left: 100%;
+		right: 0;
+		background-color: #008CBA;
+		overflow: hidden;
+		width: 0;
+		height: 100%;
+		transition: 1s ease;
+	}
+
+	.picture_container:hover .picture_overlay_left {
+		width: 100%;
+	}
+	.picture_container:hover .picture_overlay_up {
+		height: 100%;
+	}
+	.picture_container:hover .picture_overlay_right {
+		width: 100%;
+		left: 0;
+	}
+
+	.picture_text {
+		white-space: nowrap; 
+		color: white;
+		font-size: 20px;
+		position: absolute;
+		overflow: hidden;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+	}
