--- a/visualization_site.css
+++ b/visualization_site.css
@@ -129,6 +129,11 @@
 		width: 100%;
 	}
 
+	.image_up {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
 	.image {
 		display: block;
 		width: auto;
