--- a/visualization_site.css
+++ b/visualization_site.css
@@ -129,6 +129,12 @@
 		width: 100%;
 	}
 
+	.image_1 {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+
 	.image_up {
 		display: block;
 		width: 100%;
