--- a/visualization_site.css
+++ b/visualization_site.css
@@ -202,3 +202,41 @@
 		transform: translate(-50%, -50%);
 		-ms-transform: translate(-50%, -50%);
 	}
+
+	* {
+  		box-sizing: border-box;
+	}
+
+	/* Style the search field */
+	form.example input[type=text] {
+ 		padding: 10px;
+ 		font-size: 17px;
+  		border: 1px solid grey;
+  		float: middle;
+  		width: 70%;
+  		background: #f1f1f1;
+	}
+
+	/* Style the submit button */
+	form.example button {
+  		float: relative;
+  		width: 25%;
+  		padding: 10px;
+  		background: #2196F3;
+  		color: white;
+  		font-size: 17px;
+  		border: 1px solid grey;
+  		border-left: none; /* Prevent double borders */
+  		cursor: pointer;
+	}
+
+	form.example button:hover {
+  		background: #0b7dda;
+	}
+
+	/* Clear floats */
+	form.example::after {
+  		content: "";
+  		clear: both;
+  		display: table;
+	}
