--- a/visualization_site.css
+++ b/visualization_site.css
@@ -13,6 +13,11 @@
 		font-size: 25px;
 		display: inline-block;
 	}
+	h3 {
+		position: relative;
+		font-size: 15px;
+		font-weight: normal;
+	}
 	.button {
 		-moz-box-shadow:inset 0px 0px 0px 0px #54a3f7;
 		-webkit-box-shadow:inset 0px 0px 0px 0px #54a3f7;
@@ -95,6 +100,7 @@
 		top:1px;
 	}
 
+	/*Break Lines*/
 	.short_line {
 		width: 70%;
 		height: 4px;
@@ -115,6 +121,8 @@
 		margin-top: 10px;
 		margin-bottom:10px;	
 	}
+
+	/*Author Pictures*/
 	.row {
 		display: flex;
 	}
@@ -123,120 +131,137 @@
 		flex: 33.33%;
 		padding: 5px;
 	}
-
 	.picture_container {
 		position: relative;
-		width: 100%;
+		width: 500px;
+		height: 300px;
+		overflow: hidden;
+		object-fit:scale-down;
 	}
-
-	.image_1 {
+	/*.image_up {
 		display: block;
 		width: 100%;
 		height: auto;
-	}
+		}*/
+		.image {
+			display: block;
+			width: auto;
+			height: auto;
+		}
+		.picture_overlay_left {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background-color: #008CBA;
+			overflow: hidden;
+			width: 0;
+			height: 100%;
+			transition: 1s ease;
+		}
+		.picture_overlay_up {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background-color: #008CBA;
+			overflow: hidden;
+			width: 100%;
+			height: 0;
+			transition: 1s ease;
+		}
+		.picture_overlay_right{
+			position: absolute;
+			bottom: 0;
+			left: 100%;
+			right: 0;
+			background-color: #008CBA;
+			overflow: hidden;
+			width: 0;
+			height: 100%;
+			transition: 1s ease;
+		}
+		.picture_container:hover .picture_overlay_left {
+			width: 100%;
+		}
+		.picture_container:hover .picture_overlay_up {
+			height: 100%;
+		}
+		.picture_container:hover .picture_overlay_right {
+			width: 100%;
+			left: 0;
+		}
+		.picture_text {
+			white-space: nowrap; 
+			color: white;
+			font-size: 20px;
+			position: absolute;
+			overflow: hidden;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+		}
 
-	.image_up {
-		display: block;
-		width: 100%;
-		height: auto;
-	}
-	.image {
-		display: block;
-		width: auto;
-		height: auto;
-	}
-
-	.picture_overlay_left {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		background-color: #008CBA;
-		overflow: hidden;
-		width: 0;
-		height: 100%;
-		transition: 1s ease;
-	}
-	.picture_overlay_up {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		background-color: #008CBA;
-		overflow: hidden;
-		width: 100%;
-		height: 0;
-		transition: 1s ease;
-	}
-	.picture_overlay_right{
-		position: absolute;
-		bottom: 0;
-		left: 100%;
-		right: 0;
-		background-color: #008CBA;
-		overflow: hidden;
-		width: 0;
-		height: 100%;
-		transition: 1s ease;
-	}
-
-	.picture_container:hover .picture_overlay_left {
-		width: 100%;
-	}
-	.picture_container:hover .picture_overlay_up {
-		height: 100%;
-	}
-	.picture_container:hover .picture_overlay_right {
-		width: 100%;
-		left: 0;
-	}
-
-	.picture_text {
-		white-space: nowrap; 
-		color: white;
-		font-size: 20px;
-		position: absolute;
-		overflow: hidden;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		-ms-transform: translate(-50%, -50%);
-	}
-
-	* {
-  		box-sizing: border-box;
-	}
-
-	/* Style the search field */
-	form.example input[type=text] {
- 		padding: 10px;
- 		font-size: 17px;
-  		border: 1px solid grey;
-  		float: middle;
-  		width: 70%;
-  		background: #f1f1f1;
-	}
-
-	/* Style the submit button */
-	form.example button {
-  		float: relative;
-  		width: 25%;
-  		padding: 10px;
-  		background: #2196F3;
-  		color: white;
-  		font-size: 17px;
-  		border: 1px solid grey;
-  		border-left: none; /* Prevent double borders */
-  		cursor: pointer;
-	}
-
-	form.example button:hover {
-  		background: #0b7dda;
-	}
-
-	/* Clear floats */
-	form.example::after {
-  		content: "";
-  		clear: both;
-  		display: table;
+		/*Search Bar*/
+		* {
+			box-sizing: border-box;
+		}
+		form.example input[type=text] {
+			padding: 10px;
+			font-size: 17px;
+			border: 1px solid grey;
+			float: middle;
+			width: 70%;
+			background: #f1f1f1;
+		}
+		form.example button {
+			float: relative;
+			width: 25%;
+			padding: 10px;
+			background: #2196F3;
+			color: white;
+			font-size: 17px;
+			border: 1px solid grey;
+			border-left: none;
+			cursor: pointer;
+		}
+		form.example button:hover {
+			background: #0b7dda;
+		}
+		form.example::after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+		/*Navigation Bar for top of page*/
+		#navbar {
+			overflow: hidden;
+			background-color: #333;
+		}
+		#navbar a {
+			float: left;
+			display: block;
+			color: #f2f2f2;
+			text-align: center;
+			padding: 14px;
+			text-decoration: none;
+		}
+		.content {
+			padding: 16px;
+		}
+		.sticky {
+			z-index: 1;
+			position: fixed;
+			top: 0;
+			width: 100%;
+		}
+		.sticky + .content {
+			padding-top: 60px;
+		}
+		/* Change the color of links on hover */
+		#navbar a:hover {
+			background-color: #ddd;
+			color: black;
+		}
 	}
