--- a/visualization_site.css
+++ b/visualization_site.css
@@ -240,11 +240,11 @@
 		display: table;
 	}
 	/*Navigation Bar for top of page*/
-	#navbar {
+	#navbar_top {
 		overflow: hidden;
 		background-color: #333;
 	}
-	#navbar a {
+	#navbar_top a {
 		float: left;
 		display: block;
 		color: #f2f2f2;
@@ -265,8 +265,39 @@
 		padding-top: 70px;
 	}
 	/* Change the color of links on hover */
-	#navbar a:hover {
+	#navbar_top a:hover {
 		background-color: #ddd;
 		color: black;
+	}
+
+	.navbar_bottom {
+		background-color: #333;
+		overflow: hidden;
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+	}
+
+	/* Style the links inside the navigation bar */
+	.navbar_bottom a {
+		float: left;
+		display: block;
+		color: #f2f2f2;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		font-size: 17px;
+	}
+
+	/* Change the color of links on hover */
+	.navbar_bottom a:hover {
+		background-color: #ddd;
+		color: black;
+	}
+
+	/* Add a color to the active/current link */
+	.navbar_bottom a.active {
+		background-color: #4CAF50;
+		color: white;
 	}
 }
