--- a/index_visual.css
+++ b/index_visual.css
@@ -24,13 +24,13 @@
 	}
 
 	table, th, td {
-      border: 1px solid black;
-      text-align: left;
-    }
+		border: 1px solid black;
+		text-align: left;
+	}
 
-    p{
-    	font-size: 30px;
-    }
+	p{
+		font-size: 30px;
+	}
 
 	.button {
 		-moz-box-shadow:inset 0px 0px 0px 0px #54a3f7;
@@ -313,5 +313,41 @@
 	.navbar_bottom a.active {
 		background-color: #4CAF50;
 		color: white;
+	}
+	
+	* {
+		box-sizing: border-box;
+	}
+
+	#searchBar {
+		background-image: url('/css/searchicon.png');
+		background-position: 10px 12px;
+		background-repeat: no-repeat;
+		width: 100%;
+		font-size: 16px;
+		padding: 12px 20px 12px 40px;
+		border: 1px solid #ddd;
+		margin-bottom: 12px;
+	}
+
+	#myList {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+	}
+
+	#myList li a {
+		border: 1px solid #ddd;
+		margin-top: -1px; /* Prevent double borders */
+		background-color: #f6f6f6;
+		padding: 12px;
+		text-decoration: none;
+		font-size: 25px;
+		color: black;
+		display: block
+	}
+
+	#myList li a:hover:not(.header) {
+		background-color: #eee;
 	}
 }
